Fixed progress bar overlapping

--- a/src/app/components/amp-linear-progress-bar/amp-linear-progress-bar.scss
+++ b/src/app/components/amp-linear-progress-bar/amp-linear-progress-bar.scss
@@ -12,7 +12,7 @@ md-progress-linear {
       height: $progress-linear-bar-height;
       background-color: $progress-bar-background-color;
     }
-    .md-progress-linear-bar {
+    .md-progress-linear-bar.md-progress-linear-bar2 {
       height: $progress-linear-bar-height;
       background-color: $progress-bar-forground-color;
     }
